--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,6 +23,12 @@ body {
   border-top: 1px solid #ccc;
   padding: 10px 0;
 }
+/*follow部分のデザイン*/
+.msg_header{
+  clear:both;
+  padding:5px 0;
+  margin-bottom: 2px;
+}
 
 .msg img {
   float: left;
